[package]
name = "ebur128"
version = "0.1.10"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
edition = "2018"
categories = ["multimedia"]
keywords = ["multimedia", "audio", "dsp"]
description = "Implementation of the EBU R128 loudness standard"
repository = "https://github.com/sdroege/ebur128"
homepage = "https://github.com/sdroege/ebur128"
license = "MIT"
readme = "README.md"
rust-version = "1.87"

[dependencies]
bitflags = "2.9.1"
smallvec = "1.15.0"
dasp_sample = "0.11"
dasp_frame = "0.11"

[build-dependencies]
csbindgen = "1.9.3"

[features]
capi = []
bindgen = []

# Enabling this increases the precision of true-peak calculation slightly, but causes a significant
# performance-hit in the default build-configuration. To avoid the performance-hit, also enable
# `RUSTFLAGS=-C target-feature=+fma`, assuming your platform supports it
precision-true-peak = []

[lib]
name = "ebur128"

[package.metadata.capi]
min_version = "0.9.1"

[package.metadata.capi.header]
name = "ebur128.h"
subdirectory = false
generation = false

[package.metadata.capi.pkg_config]
name = "libebur128"
filename = "libebur128"
description = "EBU R 128 standard for loudness normalisation"
version = "1.2.6"

[package.metadata.capi.library]
name = "ebur128"
version = "1.2.6"

[profile.dev]
opt-level = 1
